--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,3 +21,10 @@ body {
 #cabecera {
     background-color: red;
 }
+
+#footer {
+	background: #777;
+	color: white;
+	text-align: center;
+	padding: 0.5em;
+}
